# NeuroSym-AI

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  LICENSE  MANIFEST.IN  MIGRATION_GUIDE.md  README.md  ROADMAP.md  V0_5_DEBATE.md  demo.py  pyproject.toml
.claude/: mimir.md
docs/: architecture.mmd  reference.html
neurosym/: __init__.py  __main__.py  cli_tui.py  version.py
neurosym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neurosym/agents/: __init__.py  loader.py  neurosym_dev_agent.md  registry.py  security_auditor.md
neurosym/agents/impact_forecaster/: README.md  __init__.py  agent.py  arch_map.py  codeowners.py  github_adapter.py  impact_exceptions.py  impact_models.py  impact_rules.yaml
neurosym/bench/: __init__.py  harness.py  nemo_comparison.py
neurosym/bench/corpus/: __init__.py  prompt_injection.py
neurosym/engine/: __init__.py  conversation.py  guard.py
neurosym/examples/: 00_smoke.py  01_pii_redaction.py  01_text_policy_smoke.py  02_invoice_json.py  02_text_policy_with_redaction.py  03_local_phi3.py  10_interactive_cli.py  run_demo.py
neurosym/examples/dummy-repo-1/: CODEOWNERS  arch_map.yaml
neurosym/integrations/: __init__.py  langchain.py
neurosym/llm/: __init__.py  base.py  fallback.py  gemini.py  ollama.py
neurosym/policy/: __init__.py  sat.py
neurosym/pre/: redaction.py
neurosym/rules/: __init__.py  action_policy.py  adversarial.py  base.py  classifier.py  composite.py  harm.py  policies.py  python_pred_rule.py  regex_rule.py  schema_rule.py  semantic.py
neurosym/rules/centroids/: injection-centroids-v1.json
neurosym/rules/output/: __init__.py  secrets.py  system_prompt.py
neurosym/rules/packs/: injection-v1.json
neurosym/schemas/: invoice.json
neurosym/tests/: test_action_policy.py  test_adversarial.py  test_agents_loader.py  test_ban_topics.py  test_composite.py  test_conversation_async.py  test_conversation_guard.py  test_conversation_rule.py  test_doctor_cli.py  test_guard.py  test_impact_agent.py  test_impact_forecaster.py  test_intent_classifier.py  test_langchain_adapter.py  test_output_secrets.py  test_output_system_prompt.py  test_redaction_then_guard.py  test_rules_basic.py  test_sat_linter.py  test_semantic_injection.py  test_streaming.py  test_text_policy.py
neurosym/utils/: __init__.py  json_tools.py
