[project]
name = "neurosym"
version = "0.1.0"
description = "Neuro-symbolic guardrails for LLMs: rules + repair loops + (optional) SMT."
readme = "README.md"
license = "Apache-2.0"       # <-- correct PEP 621 form
authors = [{ name = "Aadit Pani" }]
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.21.0",
  "typing-extensions>=4.7.0",
  "google-generativeai>=0.7.2",
  "requests>=2.31.0"
]

[project.optional-dependencies]
z3 = ["z3-solver>=4.12"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "mypy>=1.8", "ruff>=0.5.0", "pre-commit>=3.5.0", "build", "twine", "python-dotenv>=1.0"]

[build-system]
requires = ["setuptools>=77", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]