

[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosym-ai"
version = "0.4.2"
description = "Neuro-symbolic guardrails for LLMs — injection detection, harm filters, output guards, streaming safety, and action-plan validation."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [{ name = "Aadit Pani" }]

keywords = ["llm", "guardrails", "neurosymbolic", "safety", "policy", "rules"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

# Core runtime deps — kept lean so Guard + rules work with minimal footprint.
# Optional features are gated behind extras below.
dependencies = [
  "jsonschema>=4.23",
  # typing-extensions only needed <3.11
  "typing-extensions>=4.7.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
# CLI (neurosym doctor, neurosym policy lint, etc.)
cli = [
  "typer>=0.12",
  "rich>=13.7",
]

# LLM repair loops and provider adapters (OllamaLLM, Guard.generate())
llm = [
  "httpx>=0.27",
  "tenacity>=9.0",
]

# ImpactForecaster agent
forecaster = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
]

# Semantic injection detection (SemanticInjectionRule)
embeddings = [
  "sentence-transformers>=3.0",
  "numpy>=1.24",
]

# SMT / constraint solving (lint())
z3 = ["z3-solver>=4.12"]

# Zero-shot NLI intent classifier (IntentClassifierRule)
classifier = [
  "transformers>=4.40",
  "torch>=2.1",
]

# LangChain integration (NeurosymCallbackHandler)
langchain = [
  "langchain-core>=0.2",
]

# Cloud provider SDKs (GeminiLLM)
providers = [
  "google-generativeai>=0.7.2",
  "requests>=2.31.0",
]

# Everything — for users who don't want to think about extras
all = [
  "neurosym-ai[cli]",
  "neurosym-ai[llm]",
  "neurosym-ai[forecaster]",
  "neurosym-ai[embeddings]",
  "neurosym-ai[z3]",
  "neurosym-ai[providers]",
  "neurosym-ai[classifier]",
  "neurosym-ai[langchain]",
]

dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6.0",
  "pre-commit>=3.5.0",
  "build",
  "twine",
  "python-dotenv>=1.0",
  # optional feature deps inlined so editable installs work without PyPI round-trip
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "tenacity>=9.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "z3-solver>=4.12",
]

[project.scripts]
# Pretty CLI (Typer app)
neurosym = "neurosym.cli_tui:app"

[project.urls]
Homepage = "https://github.com/AaditPani-RVU/NeuroSym-AI"
Repository = "https://github.com/AaditPani-RVU/NeuroSym-AI"
Issues = "https://github.com/AaditPani-RVU/NeuroSym-AI/issues"

# -------------------------
# Setuptools packaging
# -------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosym*"]

# Include JSON packs, centroids, typed marker, and agent prompt files
[tool.setuptools.package-data]
neurosym = ["**/*.json", "**/py.typed", "agents/*.md"]

# -------------------------
# Tooling
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "C4", "UP"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true

# Only the library
files = ["neurosym"]
exclude = "(^|/)(.venv|dist|build|neurosym/tests|neurosym/examples|neurosym/agents)/"

[[tool.mypy.overrides]]
module = [
  "neurosym.cli_tui",
  "neurosym.llm.gemini",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "google",
  "google.*",
  "google.generativeai",
  "rich",
  "rich.*",
  "typer",
  "z3",
  "z3.*",
  "yaml",
  "pydantic",
  "pydantic.*",
]
ignore_missing_imports = true

# impact_forecaster and github_adapter pull in pydantic/yaml at runtime;
# their mypy analysis is best-effort — suppress errors in those submodules.
[[tool.mypy.overrides]]
module = [
  "neurosym.agents.impact_forecaster",
  "neurosym.agents.impact_forecaster.*",
]
ignore_errors = true

# sat.py uses z3 which has no type stubs — suppress all z3-related errors.
[[tool.mypy.overrides]]
module = ["neurosym.policy.sat"]
ignore_errors = true

# sentence-transformers and numpy are optional deps with no bundled stubs.
[[tool.mypy.overrides]]
module = ["neurosym.rules.semantic", "sentence_transformers", "sentence_transformers.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "neurosym.llm.fallback",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "transformers",
  "transformers.*",
  "torch",
  "torch.*",
  "langchain_core",
  "langchain_core.*",
  "langchain",
  "langchain.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "neurosym.rules.classifier",
  "neurosym.integrations.langchain",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["neurosym/tests"]



